--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register src/specs/",
+    "test": "mocha ./src/models/specs",
     "start": "webpack -w"
   },
   "keywords": [],
@@ -14,6 +14,8 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
     "webpack": "^1.12.12"
   },
   "dependencies": {
